# LabCommander

./: .gitignore  CHANGELOG  LICENSE.txt  README.md  pyproject.toml
docs/: components.dot  create_logo.py  physical-locations.dot  protocols.md  services.md  virtual-locations.dot
labc/: __about__.py  __init__.py  __main__.py  aio_api.py  api.py  config.toml  configuration.py  router.py  server.py  services.py  state.py
labc/cli/: __init__.py  configure.py  list.py  publish.py  route.py  serve.py  status.py  subscribe.py
labc/services/: control.py  sample_service.py
labc/util/: __init__.py  aio.py  net.py  util.py
tests/: __init__.py  start_server.py  test_register.py
tests/services/: syntax_error_module.py
tries/: try_daemon.py  try_loading_service.py
tries/services/: blub.py
